Nav Menu Fix spacing

--- a/styles/menuBar768.css
+++ b/styles/menuBar768.css
@@ -53,7 +53,7 @@ For screens 768px and less
         overflow-x: auto;      /* allows safe scrolling if needed */     
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: 3px;
         padding: 0 10px;
         padding-left: -5px;
     }
@@ -85,16 +85,16 @@ For screens 768px and less
         gap: 6px;
         color: white;
         font-size: 13px;
-        margin-left: 0;
+        margin-left: 3px;
     }
 
     #menu-language {
         display: flex;
-        align-items: center;
+        align-items: right;
         gap: 0px;
         padding: 0;
-        margin-left: -10px;
-        margin-right: -5px;
+        margin-left: -5px;
+        margin-right: 0;
     }
 
     .language span {
